200316 - 17:52 fixed sticky position of audio player on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@ h2, h3, p {
     border: 1px solid black;
     border-radius: 25px;
     width: 100%;
+    position: -webkit-sticky;
+    position: sticky; 
+    top: 25px;
 }
 
 .sticky-preview {
@@ -233,7 +236,8 @@ input {
     .audio-player {
         position: fixed;
         top: 10px;
-        width: 100%;
+        width: 80%;
+        margin-left: 10%;
     }
 
     .mobile-header {
